fixed alignment in nav bar and added jquery to smooth scroll and made nav bar transpanret by using js

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,11 +118,12 @@ p {
   top: 0;
   position: sticky;
   z-index: 1;
-  padding: 1rem;
+  padding: 0.8rem;
 }
 #nav-bar ul {
   display: flex;
   list-style: none;
+  align-items: center;
 }
 
 #nav-bar ul li a {
@@ -153,7 +154,7 @@ p {
 
   /* Black screen Overlay */
   position: absolute;
-  top: 60px;
+  top: 56.5px;
   left: 0;
   right: 0;
   bottom: 0;
